Fix minor things such as gaps, bg colors

--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ ul {
     background: #1F2937;
     display: flex;
     justify-content: space-between;
+    gap: 10px;
     align-items: center;
     padding: 32px 204px 64px;
 }
@@ -73,7 +74,7 @@ img {
 }
 
 .second-section {
-    background: #F9FAF8;
+    background: #FFF;
 }
 
 .title {
@@ -101,7 +102,7 @@ img {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding: 32px 174px 64px;
+    padding: 64px 174px 64px;
 }
 
 .quote-text{
@@ -121,7 +122,7 @@ img {
 }
 
 .fourth-section {
-    background: #F9FAF8;
+    background: #FFF;
     display: flex;
     justify-content: center;
     padding: 32px 174px 32px;
